page host ie width overflow fixes

--- a/styles/sass/modules/landing.scss
+++ b/styles/sass/modules/landing.scss
@@ -15,7 +15,7 @@
     position: absolute;
     top: 5vw;
     left: 50%;
-    width: 50vw;
+    width: 50%;
     height: 10vw;
     background: black;
     mix-blend-mode: multiply;
