--- a/styles/sass/modules/text-insert.scss
+++ b/styles/sass/modules/text-insert.scss
@@ -17,8 +17,8 @@
     position: relative;
     padding: 7.8vw 0 7.8vw 0;
 //    top: $shift;
-    margin-left: 12.5vw;
-    width: 87.5vw;
+    margin-left: 12.5%;
+    width: 87.5%;
     color: white;
     @include halftone();
 
